--- a/serverless.yml
+++ b/serverless.yml
@@ -6,3 +6,15 @@ provider:
 
 plugins:
   - serverless-appsync-plugin
+
+custom:
+  accountId: ${env:AWS_ACCOUNT_ID}
+  appSync:
+    name: BlogApp # AppSyncのAPI名
+    authenticationType: AMAZON_COGNITO_USER_POOLS # API Keyなど選択
+    userPoolConfig:
+      # Cognitoの設定
+      awsRegion: ap-northeast-1
+      defaultAction: ALLOW
+      userPoolId: ap-northeast-1_XXXXX
+    schema: schema.graphql
