Fix bug and environment value

--- a/serverless.yml
+++ b/serverless.yml
@@ -16,7 +16,7 @@ custom:
       # Cognitoの設定
       awsRegion: ap-northeast-1
       defaultAction: ALLOW
-      userPoolId: ap-northeast-1_XXXXX
+      userPoolId: ${env:AWS_COGNITO_USER_POOL_ID}
     schema: schema.graphql
     dataSources:
       - type: AWS_LAMBDA
@@ -24,14 +24,14 @@ custom:
         config:
           functionName: blog-app-resolver
           lambdaFunctionArn: "arn:aws:lambda:ap-northeast-1:${env:AWS_ACCOUNT_ID}:function:blog-app-resolver"
-          serviceRoleArn: "arn:aws:iam:${env:AWS_ACCOUNT_ID}:role/service-role/appsync-ds-lam-xxxxxxxxxxxxx"
+          serviceRoleArn: "arn:aws:iam::${env:AWS_ACCOUNT_ID}:role/service-role/${env:AWS_APPSYNC_SERVICE_ROLE_NAME}"
     mappingTemplates:
-      - dataSources: BlogAppResolber
+      - dataSource: BlogAppResolver
         type: Query # Query, Mutation, Subscription
         field: listArticle # Schema内のフィールド名
         request: "query-list-blog-request.vtl"
         response: "common-response.vtl"
-      - dataSources: BlogAppResolber
+      - dataSource: BlogAppResolver
         type: Mutation
         field: createArticle
         request: "mutation-create-blog-request.vtl"
